--- a/.github/workflows/migration.yml
+++ b/.github/workflows/migration.yml
@@ -44,6 +44,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_A }}
           AWS_DEFAULT_REGION: us-east-2
         run: |
+          chmod +x migrate.sh
           ./migrate.sh
 
       - name: Run migrate2 script (Account B)
@@ -52,6 +53,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_B }}
           AWS_DEFAULT_REGION: us-east-2
         run: |
+          chmod +x migrate2.sh
           ./migrate2.sh
 
       - name: Create cluster and service Account B
