--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-ACCOUNT_A_REPO1=""
+ACCOUNT_A_REPO1="607700977843.dkr.ecr.us-east-2.amazonaws.com/abhishek-harkar"
 ACCOUNT_B_REPO1=""
-ACCOUNT_A_REPO2=""
+ACCOUNT_A_REPO2="607700977843.dkr.ecr.us-east-2.amazonaws.com/abhishek-harkar"
 ACCOUNT_B_REPO2=""
 IMAGE_TAG="latest"
-TASK_FAMILY1="api-with-redis-task"    
-TASK_FAMILY2="frontend-task"  
-REGION="us-east-1"
+TASK_FAMILY1="abhishekharkar-strapi-task"    
+TASK_FAMILY2="abhishekharkar-strapi-task"  
+REGION="us-east-2"
 PROFILE="default"            
 OUT_FILE1="td1.json"
 OUT_FILE2="td2.json"
